@@ -2527,6 +2527,7 @@ g_base64_encode_close
 g_base64_encode
 g_base64_decode_step
 g_base64_decode
+g_base64_decode_inplace
 </SECTION>
 
 <SECTION>
