@@ -1,3 +1,8 @@
+2009-01-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/glib-sections.txt:
+	* glib/tmpl/base64.sgml: Mention g_base64_decode_inplace
+
 2009-01-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.19.4 ===
